# whirlwin

./: Cargo.toml  README.md  design.txt
core/: Cargo.toml
core/src/: callbacks.rs  keybinds.rs  main.rs  user_config.rs  window.rs  window_manager.rs
src/: callbacks.rs  handle.rs  keybinds.rs  main.rs  window.rs  window_manager.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  main.rs
src/win_api/: window_manager.rs
ui/: index.html  main.js  styles.css
